# ptLeftarCore

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
ptLeftarCore/: CMakeLists.txt  ImageWriter.h  objloader.h  ptLeftarCore.cpp
ptLeftarCore/Graphics/: AABB.cpp  AABB.h  BoundingBox.cpp  BoundingBox.h  Color.h  Material.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vertex.h
ptLeftarCore/Graphics/Primitives/: Plane.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
ptLeftarCore/Graphics/Spectrum/: CoefficientSpectrum.cpp  CoefficientSpectrum.h  RGBSpectrum.cpp  RGBSpectrum.h  SampledSpectrum.cpp  SampledSpectrum.h
ptLeftarCore/Graphics/Techniques/: BRDFTechnique.h  Technique.h
ptLeftarCore/Math/: Base.cpp  Base.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Ray.h  Vector3.cpp  Vector3.h
ptLeftarCore/Optimizers/Octree/: Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h
